--- a/docker_project.yml
+++ b/docker_project.yml
@@ -3,6 +3,7 @@
   any_errors_fatal: true
   hosts: _development
   become: true
+  become_user: root
   tasks:
     - name: upgrade all packages
       yum:
