--- a/ansible.cfg
+++ b/ansible.cfg
@@ -2,5 +2,5 @@
 host_key_checking = False
 inventory=inventory_aws_ec2.yml
 interpreter_python=auto_silent
-private_key_file=./{{key_pair}}
+private_key_file=/var/lib/jenkins/workspace/jenkins-web-page-application-postgresql-nodejs-react-ansible/{{key_pair}}
 remote_user=ec2-user
