--- a/ansible.cfg
+++ b/ansible.cfg
@@ -4,3 +4,4 @@ inventory=inventory_aws_ec2.yml
 interpreter_python=auto_silent
 private_key_file=./{{key_pair}}
 remote_user=ec2-user
+sudo_user=jenkins
