--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,5 +3,4 @@ host_key_checking = False
 inventory=inventory_aws_ec2.yml
 interpreter_python=auto_silent
 private_key_file=./{{key_pair}}
-remote_user=jenkins
-sudo_user=jenkins
+remote_user=ec2-user
