--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,6 @@
 [defaults]
 host_key_checking = False
+deprecation_warnings=False
 inventory=inventory_aws_ec2.yml
 interpreter_python=auto_silent
 private_key_file=./{{key_pair}}
