--- a/inventory_aws_ec2.yml
+++ b/inventory_aws_ec2.yml
@@ -1,6 +1,8 @@
 plugin: aws_ec2
 regions:
   - "us-east-1"
+filters:
+  tag:stack: ansible_project
 keyed_groups:
   - key: tags.Name
   - key: tags.environment
