--- a/denemehttps/Jenkinsfile
+++ b/denemehttps/Jenkinsfile
@@ -49,10 +49,83 @@ pipeline{
             }
         }
 
+        stage('dns-record-control'){
+            agent any
+            steps{
+                withAWS(credentials: 'mycredentials', region: 'us-east-1') {
+                    script {
+                        
+                        env.ZONE_ID = sh(script:"aws route53 list-hosted-zones-by-name --dns-name $DOMAIN_NAME --query HostedZones[].Id --output text | cut -d/ -f3", returnStdout:true).trim()
+                        env.ELB_DNS = sh(script:"aws route53 list-resource-record-sets --hosted-zone-id $ZONE_ID --query \"ResourceRecordSets[?Name == '\$FQDN.']\" --output text | tail -n 1 | cut -f2", returnStdout:true).trim()  
+                    }
+                    sh "sed -i 's|{{DNS}}|$ELB_DNS|g' deleterecord.json"
+                    sh "sed -i 's|{{FQDN}}|$FQDN|g' deleterecord.json"
+                    sh '''
+                        RecordSet=$(aws route53 list-resource-record-sets   --hosted-zone-id $ZONE_ID   --query ResourceRecordSets[] | grep -i $FQDN) || true
+                        if [ "$RecordSet" != '' ]
+                        then
+                            aws route53 change-resource-record-sets --hosted-zone-id $ZONE_ID --change-batch file://deleterecord.json
+                        
+                        fi
+                    '''
+                    
+                }                  
+            }
+        }
+
+        stage('Aws-Certificate-Manager'){
+            agent any
+            steps{
+                withAWS(credentials: 'mycredentials', region: 'us-east-1') {
+
+                    sh '''
+                        Acm=$(aws acm list-certificates --query CertificateSummaryList[].[CertificateArn,DomainName] --output text | grep $FQDN) || true
+                        if [ "$Acm" == '' ]
+                        then
+                            aws acm request-certificate --domain-name $FQDN --validation-method DNS --query CertificateArn --region ${AWS_REGION}
+                        
+                        fi
+                    '''
+                        
+                }                  
+            }
+        }
+
+        stage('ssl-tls-record-validate'){
+            agent any
+            steps{
+                withAWS(credentials: 'mycredentials', region: 'us-east-1') {
+                    script {
+                        env.SSL_CERT_ARN = sh(script:"aws acm list-certificates --query CertificateSummaryList[].[CertificateArn,DomainName]   --output text | grep $FQDN | cut -f1", returnStdout:true).trim()
+                        env.SSL_CERT_NAME = sh(script:"aws acm describe-certificate --certificate-arn $SSL_CERT_ARN --query Certificate.DomainValidationOptions --output text | tail -n 1 | cut -f2", returnStdout:true).trim()
+                        env.SSL_CERT_VALUE = sh(script:"aws acm describe-certificate --certificate-arn $SSL_CERT_ARN --query Certificate.DomainValidationOptions --output text | tail -n 1 | cut -f4", returnStdout:true).trim()   
+                    }
+
+                    sh "sed -i 's|{{SSL_CERT_NAME}}|$SSL_CERT_NAME|g' deletecertificate.json"
+                    sh "sed -i 's|{{SSL_CERT_VALUE}}|$SSL_CERT_VALUE|g' deletecertificate.json"
+
+                    sh '''
+                        SSLRecordSet=$(aws route53 list-resource-record-sets   --hosted-zone-id $ZONE_ID   --query ResourceRecordSets[] | grep -i $SSL_CERT_VALUE) || true
+                        if [ "$SSLRecordSet" != '' ]
+                        then
+                            aws route53 change-resource-record-sets --hosted-zone-id $ZONE_ID --change-batch file://deletecertificate.json
+                        
+                        fi
+                    '''
+
+                    sh "sed -i 's|{{SSL_CERT_NAME}}|$SSL_CERT_NAME|g' certificate.json"
+                    sh "sed -i 's|{{SSL_CERT_VALUE}}|$SSL_CERT_VALUE|g' certificate.json"
+                    sh "aws route53 change-resource-record-sets --hosted-zone-id $ZONE_ID --change-batch file://certificate.json"
+                                 
+                }                  
+            }
+        }
+
         stage('create infrastructure with terraform'){
             agent any
             steps{
                 withAWS(credentials: 'mycredentials', region: 'us-east-1') {
+                    sh "sed -i 's|{{carn}}|$SSL_CERT_ARN |g' main.tf"
                     sh "terraform init" 
                     sh "terraform apply -input=false -auto-approve"
                 }    
@@ -114,31 +187,6 @@ pipeline{
             }
         }
 
-
-        stage('dns-record-control'){
-            agent any
-            steps{
-                withAWS(credentials: 'mycredentials', region: 'us-east-1') {
-                    script {
-                        
-                        env.ZONE_ID = sh(script:"aws route53 list-hosted-zones-by-name --dns-name $DOMAIN_NAME --query HostedZones[].Id --output text | cut -d/ -f3", returnStdout:true).trim()
-                        env.ELB_DNS = sh(script:"aws route53 list-resource-record-sets --hosted-zone-id $ZONE_ID --query \"ResourceRecordSets[?Name == '\$FQDN.']\" --output text | tail -n 1 | cut -f2", returnStdout:true).trim()  
-                    }
-                    sh "sed -i 's|{{DNS}}|$ELB_DNS|g' deleterecord.json"
-                    sh "sed -i 's|{{FQDN}}|$FQDN|g' deleterecord.json"
-                    sh '''
-                        RecordSet=$(aws route53 list-resource-record-sets   --hosted-zone-id $ZONE_ID   --query ResourceRecordSets[] | grep -i $FQDN) || true
-                        if [ "$RecordSet" != '' ]
-                        then
-                            aws route53 change-resource-record-sets --hosted-zone-id $ZONE_ID --change-batch file://deleterecord.json
-                        
-                        fi
-                    '''
-                    
-                }                  
-            }
-        }
-
         stage('dns-record'){
             agent any
             steps{
@@ -155,54 +203,6 @@ pipeline{
             }
         }
 
-        stage('Aws-Certificate-Manager'){
-            agent any
-            steps{
-                withAWS(credentials: 'mycredentials', region: 'us-east-1') {
-
-                    sh '''
-                        Acm=$(aws acm list-certificates --query CertificateSummaryList[].[CertificateArn,DomainName] --output text | grep $FQDN) || true
-                        if [ "$Acm" == '' ]
-                        then
-                            aws acm request-certificate --domain-name $FQDN --validation-method DNS --query CertificateArn --region ${AWS_REGION}
-                        
-                        fi
-                    '''
-                        
-                }                  
-            }
-        }
-
-        stage('ssl-tls-record-validate'){
-            agent any
-            steps{
-                withAWS(credentials: 'mycredentials', region: 'us-east-1') {
-                    script {
-                        env.SSL_CERT_ARN = sh(script:"aws acm list-certificates --query CertificateSummaryList[].[CertificateArn,DomainName]   --output text | grep $FQDN | cut -f1", returnStdout:true).trim()
-                        env.SSL_CERT_NAME = sh(script:"aws acm describe-certificate --certificate-arn $SSL_CERT_ARN --query Certificate.DomainValidationOptions --output text | tail -n 1 | cut -f2", returnStdout:true).trim()
-                        env.SSL_CERT_VALUE = sh(script:"aws acm describe-certificate --certificate-arn $SSL_CERT_ARN --query Certificate.DomainValidationOptions --output text | tail -n 1 | cut -f4", returnStdout:true).trim()   
-                    }
-
-                    sh "sed -i 's|{{SSL_CERT_NAME}}|$SSL_CERT_NAME|g' deletecertificate.json"
-                    sh "sed -i 's|{{SSL_CERT_VALUE}}|$SSL_CERT_VALUE|g' deletecertificate.json"
-
-                    sh '''
-                        SSLRecordSet=$(aws route53 list-resource-record-sets   --hosted-zone-id $ZONE_ID   --query ResourceRecordSets[] | grep -i $SSL_CERT_VALUE) || true
-                        if [ "$SSLRecordSet" != '' ]
-                        then
-                            aws route53 change-resource-record-sets --hosted-zone-id $ZONE_ID --change-batch file://deletecertificate.json
-                        
-                        fi
-                    '''
-
-                    sh "sed -i 's|{{SSL_CERT_NAME}}|$SSL_CERT_NAME|g' certificate.json"
-                    sh "sed -i 's|{{SSL_CERT_VALUE}}|$SSL_CERT_VALUE|g' certificate.json"
-                    sh "aws route53 change-resource-record-sets --hosted-zone-id $ZONE_ID --change-batch file://certificate.json"
-                                 
-                }                  
-            }
-        }
-    
     }
     post {
         always {
