--- a/docker_project.yml
+++ b/docker_project.yml
@@ -100,7 +100,7 @@
         ports:
         - "5432:5432"
         env:
-          POSTGRES_PASSWORD: "{{ pwhash | password_hash ('sha512') }}" #"Pp12345678" 
+          POSTGRES_PASSWORD: "{{ password }}" #"{{ pwhash | password_hash ('sha512') }}" #"Pp12345678" 
         volumes:
           - /custom/mount:/var/lib/postgresql/data
       register: docker_info
