--- a/docker_project.yml
+++ b/docker_project.yml
@@ -182,18 +182,18 @@
       copy:
         src: "{{react_home}}/Dockerfile"
         dest: "{{ container_path }}"
-    - name: copy Docker Compose files
-      copy:
-        src: "{{react_home}}/docker-compose.yml"
-        dest: "{{ container_path }}"
-    - name: copy init-letsencrypt.sh
-      copy:
-        src: "{{react_home}}/init-letsencrypt.sh"
-        dest: "{{ container_path }}"
-    - name: copy app.conf files
-      copy:
-        src: "{{react_home}}/data/"
-        dest: "{{ container_path }}"
+    #- name: copy Docker Compose files
+    #  copy:
+    #    src: "{{react_home}}/docker-compose.yml"
+    #    dest: "{{ container_path }}"
+    #- name: copy init-letsencrypt.sh
+    #  copy:
+    #    src: "{{react_home}}/init-letsencrypt.sh"
+    #    dest: "{{ container_path }}"
+    #- name: copy app.conf files
+    #  copy:
+    #    src: "{{react_home}}/data/"
+    #    dest: "{{ container_path }}"
     - name: remove {{ container_name }} container and {{ image_name }} image if exists
       shell: "docker ps -q --filter 'name={{ container_name }}' | grep -q . && docker stop {{ container_name }} && docker rm -fv {{ container_name }} && docker image rm -f {{ image_name }} || echo 'Not Found'"
     - name: remove {{ artf_container_name }} container and {{ artf_image_name }} image if exists
@@ -205,17 +205,17 @@
           path: "{{ container_path }}"
         source: build
         state: present
-    #- name: Launch nginx and react artifact container
-    #  docker_container:
-    #    name: "{{ artf_container_name }}"
-    #    image: "{{ artf_image_name }}"
-    #    state: started
-    #    ports:
-    #    - "80:80"
-    - name: let's start encrypt
-      shell: "sh '{{ container_path }}/init-letsencrypt.sh' -y"
-    - name: deploy Docker Compose stack
-      docker_compose:
-        project_src: "{{ container_path }}"
-        files: docker-compose.yml
-        state: present
+    - name: Launch nginx and react artifact container
+      docker_container:
+        name: "{{ artf_container_name }}"
+        image: "{{ artf_image_name }}"
+        state: started
+        ports:
+        - "80:80"
+    #- name: let's start encrypt
+    #  shell: "sh '{{ container_path }}/init-letsencrypt.sh' -y"
+    #- name: deploy Docker Compose stack
+    #  docker_compose:
+    #    project_src: "{{ container_path }}"
+    #    files: docker-compose.yml
+    #    state: present
