--- a/react_files/docker-compose.yml
+++ b/react_files/docker-compose.yml
@@ -3,6 +3,9 @@ version: '3'
 services:
   nginx:
     image: nginx:1.15-alpine
+    links:
+    - certbot
+    - app
     restart: unless-stopped
     volumes:
       - ./data/nginx:/etc/nginx/conf.d
@@ -19,3 +22,7 @@ services:
       - ./data/certbot/conf:/etc/letsencrypt
       - ./data/certbot/www:/var/www/certbot
     entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
+  app:
+    image: mehmet/react_artf
+    ports:
+      - "80"
