--- a/docker_project.yml
+++ b/docker_project.yml
@@ -182,18 +182,6 @@
       copy:
         src: "{{react_home}}/Dockerfile"
         dest: "{{ container_path }}"
-    #- name: copy Docker Compose files
-    #  copy:
-    #    src: "{{react_home}}/docker-compose.yml"
-    #    dest: "{{ container_path }}"
-    #- name: copy init-letsencrypt.sh
-    #  copy:
-    #    src: "{{react_home}}/init-letsencrypt.sh"
-    #    dest: "{{ container_path }}"
-    #- name: copy app.conf files
-    #  copy:
-    #    src: "{{react_home}}/data/"
-    #    dest: "{{ container_path }}"
     - name: remove {{ container_name }} container and {{ image_name }} image if exists
       shell: "docker ps -q --filter 'name={{ container_name }}' | grep -q . && docker stop {{ container_name }} && docker rm -fv {{ container_name }} && docker image rm -f {{ image_name }} || echo 'Not Found'"
     - name: remove {{ artf_container_name }} container and {{ artf_image_name }} image if exists
@@ -212,10 +200,56 @@
         state: started
         ports:
         - "80:80"
-    #- name: let's start encrypt
-    #  shell: "sh '{{ container_path }}/init-letsencrypt.sh' -y"
-    #- name: deploy Docker Compose stack
-    #  docker_compose:
-    #    project_src: "{{ container_path }}"
-    #    files: docker-compose.yml
-    #    state: present
+   
+- name:  Tls  Server configuration
+  hosts: _ansible_tls
+  gather_facts: No
+  any_errors_fatal: true
+  vars:
+    react_home: {{workspace}}/react_files
+    container_path: /home/ec2-user/react
+    container_name: mehmet_react
+    image_name: mehmet/react
+    artf_container_name: mehmet_react_artf
+    artf_image_name: mehmet/react_artf
+  tasks:
+    - name: create build directory
+      become: true
+      file:
+        path: "{{ container_path }}"
+        state: directory
+        owner: root
+        group: root
+        mode: '0755'
+    - name: copy Docker Compose files
+      become: true
+      copy:
+        src: "{{react_home}}/docker-compose.yml"
+        dest: "{{ container_path }}"
+    - name: copy init-letsencrypt.sh
+      become: true
+      copy:
+        src: "{{react_home}}/init-letsencrypt.sh"
+        dest: "{{ container_path }}"
+        owner: root
+        group: root
+        mode: '0755'
+    - name: copy app.conf files
+      become: true
+      copy:
+        src: "{{react_home}}/data/"
+        dest: "{{ container_path }}"
+        owner: root
+        group: root
+        mode: '0755'
+    - name: remove {{ container_name }} container and {{ image_name }} image if exists
+      shell: "docker ps -q --filter 'name={{ container_name }}' | grep -q . && docker stop {{ container_name }} && docker rm -fv {{ container_name }} && docker image rm -f {{ image_name }} || echo 'Not Found'"
+    - name: remove {{ artf_container_name }} container and {{ artf_image_name }} image if exists
+      shell: "docker ps -q --filter 'name={{ artf_container_name }}' | grep -q . && docker stop {{ artf_container_name }} && docker rm -fv {{ artf_container_name }} && docker image rm -f {{ artf_image_name }} || echo 'Not Found'"
+    - name: let's start encrypt
+      shell: "sh '{{ container_path }}/init-letsencrypt.sh' -y"
+    - name: deploy Docker Compose stack
+      docker_compose:
+        project_src: "{{ container_path }}"
+        files: docker-compose.yml
+        state: present
