--- a/docker_project.yml
+++ b/docker_project.yml
@@ -246,10 +246,10 @@
       shell: "docker ps -q --filter 'name={{ container_name }}' | grep -q . && docker stop {{ container_name }} && docker rm -fv {{ container_name }} && docker image rm -f {{ image_name }} || echo 'Not Found'"
     - name: remove {{ artf_container_name }} container and {{ artf_image_name }} image if exists
       shell: "docker ps -q --filter 'name={{ artf_container_name }}' | grep -q . && docker stop {{ artf_container_name }} && docker rm -fv {{ artf_container_name }} && docker image rm -f {{ artf_image_name }} || echo 'Not Found'"
-    - name: let's start encrypt
-      shell: "sh '{{ container_path }}/init-letsencrypt.sh'"
-    - name: deploy Docker Compose stack
-      docker_compose:
-        project_src: "{{ container_path }}"
-        files: docker-compose.yml
-        state: present
+    #- name: let's start encrypt
+    #  shell: "sh '{{ container_path }}/init-letsencrypt.sh'"
+    #- name: deploy Docker Compose stack
+    #  docker_compose:
+    #    project_src: "{{ container_path }}"
+    #    files: docker-compose.yml
+    #    state: present
