--- a/docker_project.yml
+++ b/docker_project.yml
@@ -213,31 +213,31 @@
     artf_container_name: mehmet_react_artf
     artf_image_name: mehmet/react_artf
   tasks:
-    #- name: Install Git
-    #  become: true
-    #  yum:
-    #    name: git
-    #    state: present
-    #- name: Clone a github repository
-    #  become: true
-    #  git:
-    #    repo: https://github.com/wmnnd/nginx-certbot.git
-    #    dest: /home/ec2-user/nginx-certbot
-    #    clone: yes
-    #    update: yes
-    #    owner: ec2-user
-    #    group: ec2-user
-    #    mode: '0775'
+    - name: Install Git
+      become: true
+      yum:
+        name: git
+        state: present
+    - name: Clone a github repository
+      become: true
+      git:
+        repo: https://github.com/wmnnd/nginx-certbot.git
+        dest: /home/ec2-user/nginx-certbot
+        clone: yes
+        update: yes
+        owner: ec2-user
+        group: ec2-user
+        mode: '0775'
     - name: copy Docker Compose files
       become: true
       copy:
         src: "{{react_home}}/docker-compose.yml"
-        dest: "{{ container_path }}"
+        dest: /home/ec2-user/nginx-certbot
     - name: copy init-letsencrypt.sh
       become: true
       copy:
         src: "{{react_home}}/init-letsencrypt.sh"
-        dest: "{{ container_path }}"
+        dest: /home/ec2-user/nginx-certbot
         owner: ec2-user
         group: ec2-user
         mode: '0775'
@@ -245,7 +245,7 @@
       become: true
       copy:
         src: "{{react_home}}/data/"
-        dest: "{{ container_path }}"
+        dest: /home/ec2-user/nginx-certbot
         owner: ec2-user
         group: ec2-user
         mode: '0775'
