--- a/docker_project.yml
+++ b/docker_project.yml
@@ -202,7 +202,7 @@
         - "80:80"
    
 - name:  Tls  Server configuration
-  hosts: _ansible_tls
+  hosts: _ansible_react
   gather_facts: No
   any_errors_fatal: true
   vars:
