--- a/react_files/docker-compose.yml
+++ b/react_files/docker-compose.yml
@@ -3,6 +3,8 @@ version: '3'
 services:
   nginx:
     image: nginx:1.15-alpine
+    build:
+      network: host
     restart: unless-stopped
     volumes:
       - ./data/nginx:/etc/nginx/conf.d
