--- a/react_files/data/data/nginx/app.conf
+++ b/react_files/data/data/nginx/app.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name clar.mehmetafsar.com;
+    server_name clarusway.mehmetafsar.com;
     server_tokens off;
 
     location /.well-known/acme-challenge/ {
@@ -14,16 +14,16 @@ server {
 
 server {
     listen 443 ssl;
-    server_name clar.mehmetafsar.com;
+    server_name clarusway.mehmetafsar.com;
     server_tokens off;
 
-    ssl_certificate /etc/letsencrypt/live/clar.mehmetafsar.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/clar.mehmetafsar.com/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/clarusway.mehmetafsar.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/clarusway.mehmetafsar.com/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
     location / {
-        proxy_pass  http://clar.mehmetafsar.com;
+        proxy_pass  http://ui:3000;
         proxy_set_header    Host                $http_host;
         proxy_set_header    X-Real-IP           $remote_addr;
         proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
