--- a/react_files/docker-compose.yml
+++ b/react_files/docker-compose.yml
@@ -1,10 +1,8 @@
-version: '3.4'
+version: '3'
 
 services:
   nginx:
-    image: nginx:1.15-alpine
-    build:
-      network: host
+    image: mehmet/react_artf
     restart: unless-stopped
     volumes:
       - ./data/nginx:/etc/nginx/conf.d
