--- a/react_files/Dockerfile
+++ b/react_files/Dockerfile
@@ -20,7 +20,7 @@ FROM nginx:alpine
 
 COPY --from=build-deps /usr/src/app/build /usr/share/nginx/html
 
-EXPOSE 80
+EXPOSE 80 443
 
 CMD ["nginx", "-g", "daemon off;"]
 
