--- a/react_files/data/data/nginx/app.conf
+++ b/react_files/data/data/nginx/app.conf
@@ -9,6 +9,7 @@ server {
 
     location / {
         return 301 https://$host$request_uri;
+        proxy_ssl_session_reuse on;
     }
 }
 
@@ -23,9 +24,10 @@ server {
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
     location / {
-        proxy_pass  http://ui:3000;
+        proxy_pass  http://clarusway.mehmetafsar.com;
         proxy_set_header    Host                $http_host;
         proxy_set_header    X-Real-IP           $remote_addr;
         proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
+        proxy_ssl_session_reuse                 on;
     }
 }
