--- a/react_files/data/data/nginx/app.conf
+++ b/react_files/data/data/nginx/app.conf
@@ -15,6 +15,7 @@ server {
 
 server {
     listen 443 ssl;
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
     server_name clarusway.mehmetafsar.com;
     server_tokens off;
 
@@ -28,6 +29,6 @@ server {
         proxy_set_header    Host                $http_host;
         proxy_set_header    X-Real-IP           $remote_addr;
         proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
-        proxy_ssl_session_reuse                 on;
+
     }
 }
