--- a/react_files/data/data/nginx/app.conf
+++ b/react_files/data/data/nginx/app.conf
@@ -9,7 +9,6 @@ server {
 
     location / {
         return 301 https://$host$request_uri;
-        proxy_ssl_session_reuse on;
     }
 }
 
@@ -26,6 +25,7 @@ server {
 
     location / {
         proxy_pass  http://clarusway.mehmetafsar.com;
+        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
         proxy_set_header    Host                $http_host;
         proxy_set_header    X-Real-IP           $remote_addr;
         proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
