--- a/react_files/data/data/nginx/app.conf
+++ b/react_files/data/data/nginx/app.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name clarusway.mehmetafsar.com;
+    server_name nodejs.mehmetafsar.com;
     server_tokens off;
 
     location /.well-known/acme-challenge/ {
@@ -8,24 +8,24 @@ server {
     }
 
     location / {
-        return 301 https://$host$request_uri;
+        return 301 https://$server_name$request_uri;
     }
 }
 
 server {
     listen 443 ssl;
-    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
-    server_name clarusway.mehmetafsar.com;
+    #add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+    server_name nodejs.mehmetafsar.com;
     server_tokens off;
 
-    ssl_certificate /etc/letsencrypt/live/clarusway.mehmetafsar.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/clarusway.mehmetafsar.com/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/nodejs.mehmetafsar.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/nodejs.mehmetafsar.com/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
     location / {
-        proxy_pass  http://clarusway.mehmetafsar.com;
-        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+        proxy_pass  http://nodejs.mehmetafsar.com;
+        #add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
         proxy_set_header    Host                $http_host;
         proxy_set_header    X-Real-IP           $remote_addr;
         proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
