--- a/react_files/data/data/nginx/app.conf
+++ b/react_files/data/data/nginx/app.conf
@@ -1,34 +1,44 @@
 server {
     listen 80;
-    server_name nodejs.mehmetafsar.com;
+    server_name post.mehmetafsar.com;
     server_tokens off;
 
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
     }
-
     location / {
-        return 301 https://$server_name$request_uri;
+        return 301 https://$host$request_uri;
     }
 }
 
 server {
+
     listen 443 ssl;
-    #add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
-    server_name nodejs.mehmetafsar.com;
+    server_name post.mehmetafsar.com;
     server_tokens off;
 
-    ssl_certificate /etc/letsencrypt/live/nodejs.mehmetafsar.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/nodejs.mehmetafsar.com/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/example.org/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/example.org/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
-    location / {
-        proxy_pass  http://nodejs.mehmetafsar.com;
-        #add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
-        proxy_set_header    Host                $http_host;
-        proxy_set_header    X-Real-IP           $remote_addr;
-        proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
+    ssl on;
+    ssl_session_cache  builtin:1000  shared:SSL:10m;
+    ssl_protocols  TLSv1 TLSv1.1 TLSv1.2;
+    ssl_ciphers HIGH:!aNULL:!eNULL:!EXPORT:!CAMELLIA:!DES:!MD5:!PSK:!RC4;
+    ssl_prefer_server_ciphers on;
 
+    location / {
+
+      proxy_set_header        Host $host;
+      proxy_set_header        X-Real-IP $remote_addr;
+      proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header        X-Forwarded-Proto $scheme;
+
+      # Fix the “It appears that your reverse proxy set up is broken" error.
+      proxy_pass          http://localhost:3000;
+      proxy_read_timeout  90;
+
+      proxy_redirect      http://localhost:3000 https://post.mehmetafsar.com;
     }
-}
+  }
